[gd_scene load_steps=11 format=2]

[ext_resource path="res://Untitled Goose Level/TextureRect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Untitled Goose Level/Player - L1.tscn" type="PackedScene" id=2]
[ext_resource path="res://GI game jam Fall 2022/goose hp icon.png" type="Texture" id=3]
[ext_resource path="res://GI game jam Fall 2022/Boss health bar.png" type="Texture" id=4]
[ext_resource path="res://GI game jam Fall 2022/boss health bar filler (put behind).png" type="Texture" id=5]
[ext_resource path="res://Untitled Goose Level/Platforms L1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Untitled Goose Level/Enemy Untitled Goose.tscn" type="PackedScene" id=7]
[ext_resource path="res://Untitled Goose Level/UntitledGoose1.tscn" type="PackedScene" id=8]
[ext_resource path="res://Untitled Goose Level/Untitled Main.gd" type="Script" id=9]
[ext_resource path="res://Untitled Goose Level/UntitledGoose3.tscn" type="PackedScene" id=10]

[node name="Node" type="Node"]
script = ExtResource( 9 )

[node name="BG" parent="." instance=ExtResource( 1 )]
margin_left = -65.0
margin_top = -38.0
margin_right = 47.0
margin_bottom = 22.0

[node name="Player - L1" parent="." instance=ExtResource( 2 )]
position = Vector2( 36, 504 )
scale = Vector2( 0.15, 0.15 )

[node name="HUD" type="Camera2D" parent="."]

[node name="Heart1" type="TextureRect" parent="HUD"]
margin_left = 3.0
margin_top = 4.0
margin_right = 1876.0
margin_bottom = 1685.0
rect_scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )

[node name="Heart2" type="TextureRect" parent="HUD"]
margin_left = 98.0
margin_top = 2.0
margin_right = 1971.0
margin_bottom = 1683.0
rect_scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )

[node name="Heart3" type="TextureRect" parent="HUD"]
margin_left = 190.0
margin_top = 1.0
margin_right = 2063.0
margin_bottom = 1682.0
rect_scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )

[node name="TextureProgress" type="TextureProgress" parent="HUD"]
margin_left = 647.0
margin_top = 2.0
margin_right = 1385.0
margin_bottom = 248.0
grow_horizontal = 0
rect_scale = Vector2( 0.5, 0.5 )
value = 50.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 1

[node name="Platform" parent="." instance=ExtResource( 6 )]
position = Vector2( -26, 610 )
scale = Vector2( 0.547506, 0.608256 )

[node name="UntitledGoose2" parent="." instance=ExtResource( 7 )]
position = Vector2( 832, 126 )

[node name="UntitledGoose1" parent="." instance=ExtResource( 8 )]
position = Vector2( 965, 544 )

[node name="UntitledGoose3" parent="." instance=ExtResource( 10 )]
position = Vector2( 116, 542 )

[connection signal="caught" from="UntitledGoose2" to="." method="_on_UntitledGoose2_caught"]
[connection signal="caught" from="UntitledGoose1" to="." method="_on_UntitledGoose1_caught"]
[connection signal="caught" from="UntitledGoose3" to="." method="_on_UntitledGoose3_caught"]
